--- a/webapp/src/scss/components/_profile.scss
+++ b/webapp/src/scss/components/_profile.scss
@@ -14,7 +14,7 @@
     }
 
     &__content {
-      padding-bottom: 1.6rem;
+      padding-bottom: 21px;
 
       @media (min-width: $md-screen-breakpoint) {
         display: grid;
@@ -139,7 +139,6 @@
     width: 100%;
     margin: 0;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 3.5rem;
   }
 
   &__contact {
