res-59 changed rem to px

--- a/webapp/src/scss/components/_intro.scss
+++ b/webapp/src/scss/components/_intro.scss
@@ -7,7 +7,7 @@
       color: $color-text-main;
       line-height: 1.75;
       text-align: justify;
-      font-size: 1.22rem;
+      font-size: 17px;
     }
   }
 }
