--- a/webapp/src/scss/components/_locals.scss
+++ b/webapp/src/scss/components/_locals.scss
@@ -1,24 +1,16 @@
 @import "../abstracts/colors";
 @import "../abstracts/variables";
 
-.locals-container {
-  .section {
-    &__header,
-    &__content {
-      padding-top: 0;
-    }
-  }
-}
-
 .locals{
   display: flex;
   float: right;
-  gap: 10px;
+  padding-top: 10px;
 
   &__language-btn {
     color: white;
     text-align: right;
     font-size: 20px;
+    margin-right: 10px;
 
     &:hover {
       cursor: pointer;
