--- a/webapp/src/scss/components/_profile.scss
+++ b/webapp/src/scss/components/_profile.scss
@@ -10,6 +10,7 @@
       @media (min-width: $md-screen-breakpoint) {
         text-align: right;
         padding-left: 0;
+        padding-top: 0;
       }
     }
 
@@ -19,6 +20,7 @@
       @media (min-width: $md-screen-breakpoint) {
         display: grid;
         grid-template-rows: minmax(400px, calc(100vh - 145px)) 145px;
+        padding-top: 0;
       }
     }
   }
@@ -31,7 +33,7 @@
 
   @media (min-width: $md-screen-breakpoint) {
     margin-top: 50vh;
-    transform: translateY(-50%);
+    transform: translateY(-60%);
   }
 
   &__photo {
@@ -53,7 +55,7 @@
 
   @media (min-width: $md-screen-breakpoint) {
     margin-top: 50vh;
-    transform: translateY(-50%);
+    transform: translateY(-60%);
   }
 
   &__name {
@@ -130,6 +132,7 @@
   display: grid;
   grid-template-columns: 1fr;
   border-top: 2px solid $color-dark-accent;
+  padding-top: 15px;
 
   @media (min-width: $xs-screen-breakpoint) {
     grid-template-columns: 1fr 1fr;
