--- a/webapp/src/views/index.html
+++ b/webapp/src/views/index.html
@@ -11,6 +11,7 @@
 <!-- PROFILE -->
 <div class="profile-container container">
     <div class="section">
+        <div class="background-container"></div>
         <div class="section__header">
             <div class="avatar">
                 <img src="assets/img/avatar.jpg" class="avatar__photo">
