--- a/webapp/src/scss/components/_profile.scss
+++ b/webapp/src/scss/components/_profile.scss
@@ -59,9 +59,9 @@
   }
 
   &__name {
+    font-weight: 300 !important;
     color: $color-text-main;
     font-size: 67px;
-    font-weight: 300;
   }
 
   &__surname {
