res-54 delete unnecessary font's styles

--- a/webapp/src/scss/components/_profile.scss
+++ b/webapp/src/scss/components/_profile.scss
@@ -59,7 +59,7 @@
   }
 
   &__name {
-    font-weight: 300 !important;
+    font-weight: 300;
     color: $color-text-main;
     font-size: 67px;
   }
